<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="title_activity_draw">Doodle-Together</string>
    
    <string name="app_name">Doodle-Together</string>
    <string name="welcome">Welcome to Doodle-Together!</string>
    <string name="start_session">Start a session</string>
    <string name="doodle_alone">Doodle alone</string>
    <string name="doodle_together">Doodle Together</string>
    <string name="hello_world">Welcome to Doodle Together</string>
     <string name="hello">Hello World, DoodleTogether!</string>
    
    <string name="menu_settings">Setting</string>
    <string name="doodling_alone">Doodling Alone</string>
    <string name="test">Testing</string>
    <string name="brush">Brush</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    
    <string name="title_activity_bluetooth_connect">Bluetooth Connect Devices</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Secure Connect</string>
    <string name="insecure_connect">Insecure Connect</string>
    <string name="discoverable">Make discoverable</string>
</resources>